[package]
name = "rutiun"
version = "0.1.0"
edition = "2018"
description = "run time units"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
big-arith = ["num-rational/num-bigint", "num-bigint"]

[dependencies]
num-traits = "0.2.14"
num-bigint = { version = "0.4.0", optional = true }
derivative = "2.2.0"

[dependencies.num-rational]
version = "0.4.0"
features = ["std"]
default-features = false